<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_preLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresentationActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.SimpleForm"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_500"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Data Terekam"
            app:expandedTitleMarginStart="15dp"
            app:expandedTitleGravity="left|bottom"
            app:expandedTitleTextColor="#0000ff"
            app:expandedTitleTextAppearance="@style/Theme.SimpleForm"
            app:collapsedTitleTextAppearance="@style/Theme.SimpleForm"
            android:background="@color/semi_white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_undraw_personal_data_re_ihde"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_square"
        android:padding="15dp"
        app:layout_anchor="@id/nestedScrollViewIn"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_marginTop="20dp">

            <TableRow
                android:background="#ffefba"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/h_nik"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/show_nik"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:text="@string/defS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </TableRow>

            <TableRow
                android:background="#fff"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/h_fullName"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/show_name"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:text="@string/defS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </TableRow>

            <TableRow
                android:background="#ffefba"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/h_birthPlace"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/show_tmp"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:text="@string/defS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/h_birthDate"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/show_tgl"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:text="@string/defS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </TableRow>

            <TableRow
                android:background="#ffefba"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/h_address"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/show_alt"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:text="@string/defS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/h_gender"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/show_jkm"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:text="@string/defS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </TableRow>

            <TableRow
                android:background="#ffefba"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/h_job"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/show_pkj"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:text="@string/defS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </TableRow>
            <TableRow
                android:background="#ffffff"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/h_marriageStatus"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/show_skw"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:text="@string/defS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </TableRow>
        </TableLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bn_main"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/semi_white"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/static_dialog"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/no_cta"
                android:onClick="openAlertDialogCancel"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/left_btn" />
            <Button
                android:id="@+id/yes_cta"
                android:onClick="openSnackBar"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/right_btn"/>

        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="start|top"
        android:layout_marginRight="26dp"
        android:backgroundTint="#fff"
        android:layout_margin="16dp"
        android:focusable="true"
        android:contentDescription="TODO" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>