<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.SimpleForm">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_500"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Idapenas"
            app:expandedTitleGravity="center|bottom"
            app:expandedTitleTextColor="#ffffff"
            app:expandedTitleTextAppearance="@style/Theme.SimpleForm"
            app:collapsedTitleTextAppearance="@style/Theme.SimpleForm"
            android:background="@drawable/background">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/app_logo_presized"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax"/>
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_shape"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="38dp">

            <TextView
                android:id="@+id/titlePage_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mainTitleText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:layout_constraintTop_toTopOf="@id/titlePage_1">

                <EditText
                    android:id="@+id/fd_nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:background="@color/semi_white"
                    android:focusable="true"
                    android:hint="@string/h_nik"
                    android:inputType="number"
                    android:maxLength="16"
                    android:nextFocusDown="@id/fd_fullName"
                    android:textColorHighlight="@android:color/holo_blue_light"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_wrapper2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:layout_constraintTop_toTopOf="@id/input_wrapper">

                <EditText
                    android:id="@+id/fd_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/h_fullName"
                    android:ems="10"
                    android:background="@color/semi_white"
                    android:capitalize="words"
                    android:nextFocusDown="@+id/fd_birthPlace"
                    android:maxLength="100"
                    android:autofillHints="Muhamad Luthfi" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_fullName"
                    android:textSize="11sp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="-16dp"
                    android:layout_marginBottom="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_wrapper3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                app:layout_constraintTop_toTopOf="@id/input_wrapper2"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <EditText
                    android:id="@+id/fd_birthPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage"
                    android:hint="@string/h_birthPlace"
                    android:ems="10"
                    android:background="@color/semi_white"
                    android:nextFocusDown="@id/fd_birthDate"
                    android:maxLength="50"
                    android:autofillHints="Kebumen" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_wrapper4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                app:layout_constraintTop_toTopOf="@id/input_wrapper3"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <EditText
                    android:id="@+id/fd_birthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="@string/h_birthDate"
                    android:clickable="true"
                    android:background="@color/semi_white"
                    android:drawableEnd="@drawable/ic_baseline_date_range_24"
                    android:drawableRight="@drawable/ic_baseline_date_range_24"
                    android:focusable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_wrapper5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                app:layout_constraintTop_toTopOf="@id/input_wrapper4"
                app:counterEnabled="true"
                app:counterMaxLength="300">

                <EditText
                    android:id="@+id/fd_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:maxLength="300"
                    android:background="@color/semi_white"
                    android:hint="@string/h_address"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_address"
                    android:textSize="11sp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="-16dp"
                    android:layout_marginBottom="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_wrapper6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                app:layout_constraintTop_toTopOf="@id/input_wrapper5">

                <Spinner
                    android:id="@+id/sp_jkm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/semi_white"
                    android:spinnerMode="dropdown"/>
<!--                <AutoCompleteTextView-->
<!--                    android:id="@+id/ac_jkm"-->
<!--                    android:layout_width="match_parent"-->
<!--                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:maxLines="1"-->
<!--                    android:singleLine="true"-->
<!--                    android:hint="@string/h_gender"-->
<!--                    android:textSize="16sp"-->
<!--                    android:paddingTop="22dp"-->
<!--                    android:paddingBottom="10dp"-->
<!--                    android:paddingStart="15dp"-->
<!--                    android:paddingEnd="10dp"-->
<!--                    android:popupTheme="@color/semi_white"/>-->
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_wrapper7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                app:layout_constraintTop_toTopOf="@id/input_wrapper6">

                <Spinner
                    android:id="@+id/sp_pkj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/semi_white"
                    android:spinnerMode="dropdown"/>

                <!--                <AutoCompleteTextView-->
<!--                    android:id="@+id/ac_pkj"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:maxLines="1"-->
<!--                    android:singleLine="true"-->
<!--                    android:hint="@string/h_job"-->
<!--                    android:textSize="16sp"-->
<!--                    android:paddingTop="22dp"-->
<!--                    android:paddingBottom="10dp"-->
<!--                    android:paddingStart="15dp"-->
<!--                    android:paddingEnd="10dp"-->
<!--                    android:completionThreshold="1" />-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_wrapper8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                app:layout_constraintTop_toTopOf="@+id/input_wrapper7">

                <Spinner
                    android:id="@+id/sp_skw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/semi_white"
                    android:spinnerMode="dropdown" />

                <!--                <AutoCompleteTextView-->
<!--                    android:id="@+id/ac_skw"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:maxLines="1"-->
<!--                    android:singleLine="true"-->
<!--                    android:hint="@string/h_marriageStatus"-->
<!--                    android:textSize="16sp"-->
<!--                    android:paddingTop="22dp"-->
<!--                    android:paddingBottom="10dp"-->
<!--                    android:paddingStart="15dp"-->
<!--                    android:paddingEnd="10dp"-->
<!--                    android:completionThreshold="1"-->
<!--                    android:popupTheme="@color/semi_white"/>-->

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mainBtnText"
                android:layout_marginTop="125dp"
                android:background="@drawable/rounded_button"
                app:layout_constraintTop_toTopOf="@+id/input_wrapper8"/>

            <Button
                android:id="@+id/histo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/secondBtnText"
                android:layout_marginTop="65dp"
                android:background="@drawable/rounded_button"
                app:layout_constraintTop_toTopOf="@+id/reg_btn"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:onClick="openInfoApp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_help_outline_24"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginRight="26dp"
        android:backgroundTint="#5999ff"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>